{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 41,
  "lineage": "081ffb7e-0e4a-5157-f8ad-852e59905e4d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:013545663918:security-group/sg-08925ca23331b139e",
            "description": "Security group with no ingress rule",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08925ca23331b139e",
            "ingress": [],
            "name": "no-ingress-sg",
            "name_prefix": "",
            "owner_id": "013545663918",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5a1f907cf047683"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:013545663918:network-acl/acl-0df3316d377f55951",
            "default_network_acl_id": "acl-0df3316d377f55951",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0df3316d377f55951",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "013545663918",
            "subnet_ids": [
              "subnet-04349ab4cdca095dc",
              "subnet-0c22b54f9800c3b23"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "globo-dev-default"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "globo-dev-default"
            },
            "vpc_id": "vpc-0e5a1f907cf047683"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:013545663918:route-table/rtb-0646623782408aa13",
            "default_route_table_id": "rtb-0646623782408aa13",
            "id": "rtb-0646623782408aa13",
            "owner_id": "013545663918",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "globo-dev-default"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "globo-dev-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0e5a1f907cf047683"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:013545663918:security-group/sg-024bb6eb11d0fc205",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-024bb6eb11d0fc205",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "013545663918",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "globo-dev-default"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "globo-dev-default"
            },
            "vpc_id": "vpc-0e5a1f907cf047683"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:013545663918:internet-gateway/igw-01c0fd87ea530fda1",
            "id": "igw-01c0fd87ea530fda1",
            "owner_id": "013545663918",
            "tags": {
              "Environment": "dev",
              "Name": "globo-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "globo-dev"
            },
            "vpc_id": "vpc-0e5a1f907cf047683"
          },
          "dependencies": [
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01c0fd87ea530fda1",
            "id": "r-rtb-0e8acce70551c1d561080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e8acce70551c1d56",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_internet_gateway.this",
            "module.main.aws_route_table.public",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:013545663918:route-table/rtb-0e8acce70551c1d56",
            "id": "rtb-0e8acce70551c1d56",
            "owner_id": "013545663918",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "globo-dev-public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "globo-dev-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5a1f907cf047683"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0136f3e35e6d73ecb",
            "route_table_id": "rtb-0e8acce70551c1d56",
            "subnet_id": "subnet-0c22b54f9800c3b23"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main.aws_route_table.public",
            "module.main.aws_subnet.public",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f07db16ed60bf4ad",
            "route_table_id": "rtb-0e8acce70551c1d56",
            "subnet_id": "subnet-04349ab4cdca095dc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main.aws_route_table.public",
            "module.main.aws_subnet.public",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:013545663918:subnet/subnet-0c22b54f9800c3b23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.42.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c22b54f9800c3b23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "013545663918",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "globo-dev-public-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "globo-dev-public-1"
            },
            "vpc_id": "vpc-0e5a1f907cf047683"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:013545663918:subnet/subnet-04349ab4cdca095dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.42.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04349ab4cdca095dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "013545663918",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "globo-dev-public-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "globo-dev-public-2"
            },
            "vpc_id": "vpc-0e5a1f907cf047683"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:013545663918:vpc/vpc-0e5a1f907cf047683",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.42.0.0/16",
            "default_network_acl_id": "acl-0df3316d377f55951",
            "default_route_table_id": "rtb-0646623782408aa13",
            "default_security_group_id": "sg-024bb6eb11d0fc205",
            "dhcp_options_id": "dopt-0d4cdeb9f22fd68d4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e5a1f907cf047683",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0646623782408aa13",
            "owner_id": "013545663918",
            "tags": {
              "Environment": "dev",
              "Name": "globo-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "globo-dev"
            }
          }
        }
      ]
    }
  ]
}